--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Geiger Counter Data</title>
 </head>
 <body>
-  <h1>Live Radiation Monitoring</h1>
+  <h1>Live Radiation Monitoring Lancashire UK</h1>
+  <h2>ESP8266 & SMB-20 Tube</h2>
   <div style="width:600px;height:400px;">
     <canvas id="radiationChart"></canvas>
   </div>
