--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Live Radiation Monitoring Lancashire UK</h1>
-  <h2>ESP8266 & SMB-20 Tube. LINK TO LIVE DATA>>>></h2>
+  <h2>ESP8266 & SMB-20 Tube. LINK TO LIVE DATA-------</h2>
   <div style="width:600px;height:400px;">
     <canvas id="radiationChart"></canvas>
   </div>
