--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <header>
         <span class="header-icon">☢</span>
         <h1>Radiation Monitor</h1>
-        <p class="subtitle">Real-time monitoring with ESP8266 &amp; SBM-20 Geiger Tube</p>
+        <p class="subtitle">Real-time monitoring with ESP32-C3 &amp; SBM-20 Geiger Tube</p>
         <span class="location-tag">📍 Lancashire, United Kingdom</span>
     </header>
 
