--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
     </div>
 
     <footer>
-        <p>☢ Data sourced from <strong style="color:#b8960c">ThingSpeak Channel 2872097</strong> · Updated every 30 seconds</p>
-        <p>Hardware: ESP8266 D1 Mini + SBM-20 Geiger-Müller Tube · Conversion factor: 0.0057 µSv/h per CPM</p>
+        <p>☢ Data sourced from <strong style="color:#b8960c">ioT Server</strong> · Updated every 30 seconds</p>
+        <p>Hardware: ESP32-C3 + SBM-20 Geiger-Müller Tube · Conversion factor: 0.0057 µSv/h per CPM</p>
         <p>Natural background radiation (global average) ≈ 0.10–0.30 µSv/h</p>
         <p style="margin-top:10px"><a href="https://github.com/benb0jangles/Geigerduino" target="_blank">GitHub: Geigerduino</a></p>
     </footer>
